--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,30 @@
+<section>
   <header>
-    <form id="login_form" method="Post" action="/login">
-      <input type="email" name="email" placeholder="Email.."></br>
-      <input type="password" name="password_digest" placeholder="Password.."></br>
-      <input id="sweet_button" value="login" type="submit"> 
+    <form id="login_form" class="clear" method="Post" action="/login">
+      <input type="password" name="password_digest" placeholder="Password..">
+      <input type="email" name="email" placeholder="Email..">
+      <input id="sweet_button" value="login" type="button" action="submit"> 
     </form>
   </header>
+</section>
+
+<section id="section1">
   <div class="container">
+    <div id="logo">
+      <p>Knowledge is a Journey</p>
+    </div>
+    <div class="content">
+      <div class="button-wrapper">
+        <a href="#" class="path">
+          <span class="path-text">Take Your First Step</span>
+          <span class="path-slide-text">Signup</span>
+          <span class="path-icon-right"><span></span></span>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="signup_form">
 
 
     <div id="profile">
