updates to bring in changes from yesterday

--- a/app/views/game.erb
+++ b/app/views/game.erb
@@ -7,5 +7,6 @@
     <input type="text" name="answer" placeholder="Your Answer"></br>
     <button id="gamesubmit" action="submit">Guess</button>
   </form>
-
+<a class="logout" href="/logout">Logout</a>
+<a class="profile" href="/profile/<%=current_user.id%>">Profile</a>
 </div>
