--- a/app/views/game.erb
+++ b/app/views/game.erb
@@ -1,3 +1,18 @@
+<section>
+  <header>
+      <form id="login_form" class="clear" method="Get" action="/logout">
+      <input id="sweet_button" value="logout" type="submit" action="submit"> 
+      <img id="gravatar" src="<%= @gravatar %>"></img>
+    </form>
+   
+     <form class="profile" class="clear" method="Get" action="/profile/<%=current_user.id%>">
+      <input id="sweet_button" value="profile" type="submit" action="submit"> 
+    </form>
+
+    
+  </header>
+</section>
+
 <div class="container">
   <div id="answer"></div><br><br>
 
@@ -7,6 +22,7 @@
     <input type="text" name="answer" placeholder="Your Answer"></br>
     <button id="gamesubmit" action="submit">Guess</button>
   </form>
-<a class="logout" href="/logout">Logout</a>
-<a class="profile" href="/profile/<%=current_user.id%>">Profile</a>
+
+  <div class="footer"></div>
+
 </div>
