--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
     <form id="login_form" class="clear" method="Post" action="/login">
       <input type="password" name="password_digest" placeholder="Password..">
       <input type="email" name="email" placeholder="Email..">
-      <input id="sweet_button" value="login" type="button" action="submit"> 
+      <input id="sweet_button" value="login" type="submit" action="submit"> 
     </form>
   </header>
 </section>
