--- a/public/css/application.css
+++ b/public/css/application.css
@@ -10,6 +10,29 @@ body {
   padding: 0px 20px 20px 20px;
 }
 
+#topics ul {
+  padding-left: 0px;
+}
+
+#topics li {
+  list-style: none;
+}
+
+#profile {
+  margin-left: 100px;
+}
+
+#topics a {
+  text-decoration: none;
+}
+
+#gravatar {
+  height: 60px;
+  border: 1px solid gray;
+  float: right;
+  margin-top: 5px;
+}
+
 th {
   text-align: left;
 }
@@ -18,6 +41,16 @@ header {
   background-color: #666;
   height: 75px;
   box-shadow: 0px 0px 7px #888888
+}
+
+.footer {
+  background-color: #666;
+  height: 80px;
+  box-shadow: 0px 0px 7px #888888;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
 }
 
 header form {
