--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,12 +1,13 @@
 <section>
   <header>
+    <div class="header_box">
     <form id="login_form" class="clear" method="Post" action="/login">
       <input id="sweet_button" value="login" type="submit" action="submit">
       <input id="email_box" type="email" name="email" placeholder="Email..">
       <input id="pass_box" type="password" name="password_digest" placeholder="Password..">
     </form>
-    <div id="exisiting">Existing Scholars</div>
-    
+    <div id="exisiting">Existing Wanderers</div>
+    </div>
   </header>
 </section>
 
